--- a/index.html
+++ b/index.html
@@ -2,147 +2,191 @@
 <html>
   <head>
     <title>Colmar Academy</title>
+    <link rel="stylesheet" href="./resources/css/reset.css">
+    <link rel="stylesheet" href="./resources/css/style.css">
   </head>
   <body>
-    <header>
-      <nav class="flex">
-        <div class="logo">
-          <img src="./resources/images/ic-logo.svg">
-          <p><span>COLMAR</span>ACADEMY</p>
-        </div>
+    <nav class="flex desktop">
+      <div class="flex centerv logo">
+        <img src="./resources/images/ic-logo.svg">
+        <p><span class="dark">COLMAR</span>ACADEMY</p>
+      </div>
 
-        <div class="bar">
-          <ul>
-            <li>On campus</li>
-            <li>Online</li>
-            <li>For companies</li>
-            <li>Sign in</li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+      <div class="bar flex centerv">
+        <ul class="flex">
+          <li>On campus</li>
+          <li>Online</li>
+          <li>For companies</li>
+          <li>Sign in</li>
+        </ul>
+      </div>
+    </nav>
 
-    <div class="">
-      <img  class="big-image" src="./resources/images/banner.jpg">
-      <div class="">
+    <nav class="flex mobile centerv">
+      <img src="./resources/images/ic-logo.svg">
+      <img src="./resources/images/ic-on-campus.svg">
+      <img src="./resources/images/ic-online.svg">
+      <img src="./resources/images/ic-login.svg">
+    </nav>
+
+    <div class="flex top centerv">
+      <div class="image-container">
+        <img class="" src="./resources/images/banner.jpg">
+      </div>
+      <div class="top-p">
         <h2>Learn something new everyday</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
         <div class="btn">Start here</div>
       </div>
     </div>
 
-    <div class="">
-      <div class="flex">
-        <img class="big-image" src="./resources/images/information-main.jpg">
-        <h2>It doesn't hurt to keep practicing</h2>
-        <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula"<br><br><br><span>Emanuel, Sr Strategist at Hiring.com</span></p>
+    <div class="banner">
+      <div class="column flex big desktop">
+        <div class="">
+          <img class="main-image" src="./resources/images/information-main.jpg">
+        </div>
+
+        <h2 class="under-image">It doesn't hurt to keep practicing</h2>
+        <p class="under-image">"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula"<br><br><br><span>Emanuel, Sr Strategist at Hiring.com</span></p>
       </div>
 
-      <div class="flex column">
-        <div class="flex">
-          <img  class="small-image" src="./resources/images/information-orientation.jpg">
-          <div class="">
+      <div class=" flex column list">
+        <div class="flex li">
+          <img  class="small-image desktop" src="./resources/images/information-orientation.jpg">
+          <img  class="small-image mobile" src="./resources/images/information-orientation-mobile.jpg">
+          <div class="flex column centerh">
             <h4>Orientation date</h4>
-            <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-            <p>Read More</p>
+            <p class="time">Tue 10/11 & Wed 10/12: 8am-3pm</p>
+            <p class="read">Read More</p>
           </div>
         </div>
 
-        <div class="flex">
-          <img  class="small-image" src="./resources/images/information-campus.jpg">
-          <div class="">
+        <div class="flex li">
+          <img  class="small-image desktop" src="./resources/images/information-campus.jpg">
+          <img  class="small-image mobile" src="./resources/images/information-campus-mobile.jpg">
+          <div class="flex column centerh">
             <h4>Our campus</h4>
-            <p>Find which campus is close by you</p>
-            <p>Read More</p>
+            <p class="time">Find which campus is close by you</p>
+            <p class="read">Read More</p>
           </div>
         </div>
 
-        <div class="flex">
-          <img  class="small-image" src="./resources/images/information-guest-lecture.jpg">
-          <div class="">
+        <div class="flex li">
+          <img  class="small-image desktop" src="./resources/images/information-guest-lecture.jpg">
+          <img  class="small-image mobile" src="./resources/images/information-guest-lecture-mobile.jpg">
+          <div class=" flex column centerh">
             <h4>Our guest lecture</h4>
-            <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-            <p>Read More</p>
+            <p class="time">Join a keynote with Oliver Sack about music in medical treatment</p>
+            <p class="read">Read More</p>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="start-learning">
+    <div class="start-learning desktop">
       <h2>Start learning</h2>
-      <div class="start-learn">
+      <div class="start-learn flex centerh">
         <div class="learn">
           <img src="./resources/images/course-software.jpg">
-          <h4>Software engineering</h4>
-          <p>COURSES</p>
-          <p>Web Development, Mobile Development</p>
+          <div class="learn-text">
+            <h4>Software engineering</h4>
+            <p>COURSES</p>
+            <p>Web Development, Mobile Development</p>
+          </div>
         </div>
 
         <div class="learn">
           <img src="./resources/images/course-computer-art.jpg">
-          <h4>Computer art</h4>
-          <p>COURSES</p>
-          <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+          <div class="learn-text">
+            <h4>Computer art</h4>
+            <p>COURSES</p>
+            <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+          </div>
         </div>
 
         <div class="learn">
           <img src="./resources/images/course-design.jpg">
-          <h4>Design</h4>
-          <p>COURSES</p>
-          <p>User Experience Design, User Research, Visual Design</p>
+          <div class="learn-text">
+            <h4>Design</h4>
+            <p>COURSES</p>
+            <p>User Experience Design, User Research, Visual Design</p>
+          </div>
         </div>
 
         <div class="learn">
           <img src="./resources/images/course-data.jpg">
-          <h4>Data</h4>
-          <p>COURSES</p>
-          <p>Data Science, Big Data, SQL, Data Visualization</p>
+          <div class="learn-text">
+            <h4>Data</h4>
+            <p>COURSES</p>
+            <p>Data Science, Big Data, SQL, Data Visualization</p>
+          </div>
         </div>
 
         <div class="learn">
           <img src="./resources/images/course-business.jpg">
-          <h4>Business</h4>
-          <p>COURSES</p>
-          <p>Product Development, Business Development, Startup</p>
+          <div class="learn-text">
+            <h4>Business</h4>
+            <p>COURSES</p>
+            <p>Product Development, Business Development, Startup</p>
+          </div>
         </div>
 
         <div class="learn">
           <img src="./resources/images/course-marketing.jpg">
-          <h4>Marketing</h4>
-          <p>COURSES</p>
-          <p>Analytics, Content Marketing, Mobile Marketing</p>
+          <div class="learn-text">
+            <h4>Marketing</h4>
+            <p>COURSES</p>
+            <p>Analytics, Content Marketing, Mobile Marketing</p>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="">
+    <div class="learning mobile column">
+      <h2>Start learning</h2>
+      <div class="">
+        <ul>
+          <li>Software engineering</li>
+          <li>Computer art</li>
+          <li>Design</li>
+          <li>Data</li>
+          <li>Business</li>
+          <li>Marketing</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="thesis">
       <h2>Thesis exhibit</h2>
-      <div class="">
-        <video src="./resources/videos/thesis.mp4">Not Available</video>
-        <h4>Reimagine urban</h4>
-        <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula"</p>
-      </div>
-
-      <div class="">
-        <div class="">
-          <img src="./resources/images/thesis-fisma.jpg">
-          <div class="">
-            <h4>Fisma: Design and Prototype</h4>
-            <p>Designer showcase of new prototype product</p>
-          </div>
+      <video class="mobile" src="./resources/videos/thesis.mp4" controls>Not Available</video>
+      <div class="flex">
+        <div class="thesis-content flex column">
+          <video class="" src="./resources/videos/thesis.mp4" controls>Not Available</video>
+          <h4>Reimagine urban</h4>
+          <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula"</p>
         </div>
 
-        <div class="">
-          <img src="./resources/images/thesis-now-and-then.jpg">
-          <div class="">
-            <h4>Now and Then</h4>
-            <p>Research study about New York</p>
+        <div class="thesis-list desktop">
+          <div class="thesis-li flex centerv">
+            <img class="small-image" src="./resources/images/thesis-fisma.jpg">
+            <div class="tlt">
+              <h4>Fisma: Design and Prototype</h4>
+              <p>Designer showcase of new prototype product</p>
+            </div>
+          </div>
+
+          <div class="thesis-li flex centerv">
+            <img class="small-image" src="./resources/images/thesis-now-and-then.jpg">
+            <div class="tlt">
+              <h4>Now and Then</h4>
+              <p>Research study about New York</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
-    <footer>
+    <footer class="flex">
       <span>&copy 2016 Colmar Academy. All rights reserved</span>
       <div class="">
         <span>Terms</span>
