--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
 
         <h2 class="under-image">It doesn't hurt to keep practicing</h2>
-        <p class="under-image">"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula"<br><br><br><span>Emanuel, Sr Strategist at Hiring.com</span></p>
+        <p class="under-image">"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula"<br><br><br><span class="span">Emanuel, Sr Strategist at Hiring.com</span></p>
       </div>
 
       <div class=" flex column list">
